# CUDA-PointPillars

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  main.cpp
data/box_prediction/: result_000000.txt  result_000001.txt  result_000002.txt  result_000003.txt  result_000004.txt  result_000005.txt  result_000006.txt  result_000007.txt  result_000008.txt  result_000009.txt
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  export.sh
docs/: CHANGELOG.MD
eval/: README.md  kitti_format.py  kitti_util.py  pcdet.pkl
eval/kitti/object/pcdet/: 000001.txt  000002.txt  000004.txt  000005.txt  000006.txt  000008.txt
eval/kitti/object/pred/: 000001.txt  000002.txt  000004.txt  000005.txt  000006.txt  000008.txt
eval/kitti/object/pred_velo/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt
include/: kernel.h  params.h  pillarScatter.h  pointpillar.h  postprocess.h  postprocess_kernels.h  preprocess.h  preprocess_kernels.h
include/plugin/: ScatterBEV.h  ScatterBEV_kernels.h
model/: NoOP.onnx  backbone.onnx  pfe.onnx  pointpillar.onnx  pp_ln.onnx
src/: main.cpp  pillarScatter.cpp  pillarScatterKernels.cu  pointpillar.cpp  postprocess.cpp  postprocess_kernels.cu  preprocess.cpp  preprocess_kernels.cu
src/plugin/: ScatterBEV.cpp  ScatterBEV_kernels.cu  kernel.h  pillarScatterKernels.cu  pointpillar-scatter.cpp  pointpillar-scatter.hpp
src/pointpillar/: kernel.h  lidar-backbone.cu  lidar-backbone.hpp  lidar-pfe.cu  lidar-pfe.hpp  lidar-postprocess.cu  lidar-postprocess.hpp  lidar-voxelization.cu  lidar-voxelization.hpp  nms.cpp  nms.cpp_  nms.hpp_  params.h  pillarScatter.cpp  pillarScatterKernels.cu  pillarscatter-kernel.cu  pillarscatter-kernel.hpp  pointpillar-scatter.cpp  pointpillar-scatter.hpp  pointpillar.cpp  pointpillar.hpp  postprocess.h  postprocess_kernels.cu
test/: CMakeLists.txt  Makefile  main.cpp
tool/: NoOP.py  README.md  build_trt_engine.sh  environment.sh  evaluate_kitti_val.sh  export_onnx.py  exporter.py  exporter_paramters.py  modify_onnx.py  params.h  simplifier_onnx.py
tool/cfgs/kitti_models/: pointpillar.yaml
tool/eval/: README.md  eval.py  kitti_format.py  transDet.py
tool/pcdet/: version.py
tool/pcdet/datasets/: __init__.py  dataset.py
tool/pcdet/datasets/processor/: data_processor.py
tool/pcdet/models/backbones_2d/: base_bev_backbone.py
tool/pcdet/models/backbones_2d/map_to_bev/: __init__.py  pointpillar_scatter.py
tool/pcdet/models/backbones_3d/vfe/: __init__.py  pillar_vfe.py
tool/pcdet/models/dense_heads/: __init__.py  anchor_head_single.py  anchor_head_template.py
tool/pcdet/models/detectors/: __init__.py  detector3d_template.py  pointpillar.py
tool/pcdet/utils/: box_utils.py
visualize/: viewer.py
visualize/visual_tools/: __init__.py  open3d_arrow.py  open3d_box.py  open3d_coordinate.py
